# django-ts-routes

./: .editorconfig  .gitignore  .releaserc.json  LICENSE  README.md  pyproject.toml
.github/workflows/: pytest.yml  release.yml  ruff.yml
src/ts_routes/: __init__.py  serializers.py
src/ts_routes/management/commands/: dump_routes_resolver.py
src/ts_routes/templates/ts_routes/_dump/: resolver.ts
src/ts_routes/utils/: text.py
tests/pytest/: settings.py  test_commands_dump_routes_resolver.py  test_serializers.py
tests/pytest/_testsite/: urls.py  views.py
