[project]
name = "django-ts-routes"
version = "0.1.0"
description = "Expose and perform reverse lookups of Django URLs in the TypeScript world."
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Sven Groot" }
]
requires-python = ">=3.8"
keywords = ["django", "urls", "reverse", "typescript", "export"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "django >= 4.2",
]

[dependency-groups]
dev = [
    "pytest-cov==5.0.0",
    "pytest==8.3.4",
    "ruff==0.8.3",
    "pytest-django==4.9.0",
]

[project.urls]
homepage = "https://github.com/svengt/django-ts-routes"
repository = "https://github.com/svengt/django-ts-routes"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ts_routes"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "SIM",
    "I",
]
ignore = ["E501"]
unfixable = ["B", "SIM"]

[tool.pytest.ini_options]
django_find_project = false
addopts = "--ds=tests.pytest.settings --reuse-db"
pythonpath = "./"
